--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caprasimo&display=swap');
 
 :root {
     --cor-destaque: #1d1b17;
@@ -8,7 +8,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Montserrat;
+    font-family: 1 font family selected;
 }
 
 body {
@@ -48,7 +48,7 @@ h1 {
     align-self: stretch;
     border-radius: 0.625rem;
     background: #FFF;
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 #entrada-de-texto::placeholder {
