--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,9 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 1 font family selected;
+    font-family: "Caprasimo", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 body {
